error.log
    Checking glassbox v0.1.0 (D:\AI and  datascience projects\Project 8\glassbox)
error[E0631]: type mismatch in closure arguments
  --> src\components\search.rs:50:43
   |
14 |     let on_search = move |_| {
   |                     -------- found signature defined here
...
50 |             <button class="search-button" on:click=on_search>
   |                                           ^^ expected due to this
   |
   = note: expected closure signature `fn(MouseEvent) -> _`
              found closure signature `fn(()) -> _`
   = note: required for `HtmlElement<Button, (Class<Static<"search-button">>,), (...,)>` to implement `leptos::prelude::OnAttribute<click, {closure@src\components\search.rs:14:21: 14:29}>`
   = note: the full name for the type has been written to 'D:\AI and  datascience projects\Project 8\glassbox\target\wasm32-unknown-unknown\debug\deps\glassbox-f962c0898e14b1b5.long-type-10923127811293623190.txt'
   = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `(HtmlElement<Input, ..., ()>, ...): RenderHtml` is not satisfied
  --> src\components\search.rs:33:5
   |
33 | /     view! {
34 | |         <Stylesheet href="search.css"/>
35 | |         <Script src="search.js"/>
...  |
56 | |         </div>
57 | |     }
   | |_____^ the trait `RenderHtml` is not implemented for `(HtmlElement<Input, (Class<...>, ..., ..., ..., ..., ...), ()>, ...)`
   |
   = help: the following other types implement trait `RenderHtml`:
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
             (A, B, C, D, E, F, G, H)
           and 19 others
   = note: required for `leptos::html::HtmlElement<leptos::html::Div, (), ()>` to implement `ElementChild<(HtmlElement<Input, ..., ()>, ...)>`
   = note: the full name for the type has been written to 'D:\AI and  datascience projects\Project 8\glassbox\target\wasm32-unknown-unknown\debug\deps\glassbox-f962c0898e14b1b5.long-type-6274515387066461300.txt'
   = note: consider using `--verbose` to print the full type name to the console
   = note: this error originates in the macro `view` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `class` exists for struct `HtmlElement<Div, (), ((HtmlElement<Input, ..., ()>, ...),)>`, but its trait bounds were not satisfied
  --> src\components\search.rs:37:14
   |
33 | /     view! {
34 | |         <Stylesheet href="search.css"/>
35 | |         <Script src="search.js"/>
36 | |
37 | |         <div class="search-container">
   | |             -^^^^^ method cannot be called due to unsatisfied trait bounds
   | |_____________|
   |
   |
  ::: C:\Users\yadun\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tachys-0.2.11\src\html\element\mod.rs:37:1
   |
37 |   pub struct HtmlElement<E, At, Ch> {
   |   --------------------------------- doesn't satisfy `_: AsRef<Element>`, `_: ClassAttribute<_>` or `_: ElementExt`
   |
   = note: the following trait bounds were not satisfied:
           `((leptos::html::HtmlElement<Input, (leptos::tachys::html::class::Class<leptos::tachys::view::static_types::Static<"search-input">>, Attr<leptos::attr::Type, leptos::tachys::view::static_types::Static<"text">>, Attr<Placeholder, leptos::tachys::view::static_types::Static<"Search...">>, leptos::ev::On<input, {closure@src\components\search.rs:10:20: 10:29}>, leptos::tachys::html::property::Property<&str, leptos::prelude::ReadSignal<std::string::String>>, leptos::ev::On<keydown, {closure@src\components\search.rs:44:28: 44:61}>), ()>, leptos::html::HtmlElement<Button, (leptos::tachys::html::class::Class<leptos::tachys::view::static_types::Static<"search-button">>, leptos::ev::On<click, {closure@src\components\search.rs:14:21: 14:29}>), (leptos::tachys::html::InertElement,)>),): RenderHtml`
           which is required by `leptos::html::HtmlElement<leptos::html::Div, (), ((leptos::html::HtmlElement<Input, (leptos::tachys::html::class::Class<leptos::tachys::view::static_types::Static<"search-input">>, Attr<leptos::attr::Type, leptos::tachys::view::static_types::Static<"text">>, Attr<Placeholder, leptos::tachys::view::static_types::Static<"Search...">>, leptos::ev::On<input, {closure@src\components\search.rs:10:20: 10:29}>, leptos::tachys::html::property::Property<&str, leptos::prelude::ReadSignal<std::string::String>>, leptos::ev::On<keydown, {closure@src\components\search.rs:44:28: 44:61}>), ()>, leptos::html::HtmlElement<Button, (leptos::tachys::html::class::Class<leptos::tachys::view::static_types::Static<"search-button">>, leptos::ev::On<click, {closure@src\components\search.rs:14:21: 14:29}>), (leptos::tachys::html::InertElement,)>),)>: leptos::prelude::ClassAttribute<_>`
           `leptos::html::HtmlElement<leptos::html::Div, (), ((leptos::html::HtmlElement<Input, (leptos::tachys::html::class::Class<leptos::tachys::view::static_types::Static<"search-input">>, Attr<leptos::attr::Type, leptos::tachys::view::static_types::Static<"text">>, Attr<Placeholder, leptos::tachys::view::static_types::Static<"Search...">>, leptos::ev::On<input, {closure@src\components\search.rs:10:20: 10:29}>, leptos::tachys::html::property::Property<&str, leptos::prelude::ReadSignal<std::string::String>>, leptos::ev::On<keydown, {closure@src\components\search.rs:44:28: 44:61}>), ()>, leptos::html::HtmlElement<Button, (leptos::tachys::html::class::Class<leptos::tachys::view::static_types::Static<"search-button">>, leptos::ev::On<click, {closure@src\components\search.rs:14:21: 14:29}>), (leptos::tachys::html::InertElement,)>),)>: AsRef<web_sys::Element>`
           which is required by `leptos::html::HtmlElement<leptos::html::Div, (), ((leptos::html::HtmlElement<Input, (leptos::tachys::html::class::Class<leptos::tachys::view::static_types::Static<"search-input">>, Attr<leptos::attr::Type, leptos::tachys::view::static_types::Static<"text">>, Attr<Placeholder, leptos::tachys::view::static_types::Static<"Search...">>, leptos::ev::On<input, {closure@src\components\search.rs:10:20: 10:29}>, leptos::tachys::html::property::Property<&str, leptos::prelude::ReadSignal<std::string::String>>, leptos::ev::On<keydown, {closure@src\components\search.rs:44:28: 44:61}>), ()>, leptos::html::HtmlElement<Button, (leptos::tachys::html::class::Class<leptos::tachys::view::static_types::Static<"search-button">>, leptos::ev::On<click, {closure@src\components\search.rs:14:21: 14:29}>), (leptos::tachys::html::InertElement,)>),)>: leptos::prelude::ElementExt`
   = note: the full name for the type has been written to 'D:\AI and  datascience projects\Project 8\glassbox\target\wasm32-unknown-unknown\debug\deps\glassbox-f962c0898e14b1b5.long-type-16068434084237709422.txt'
   = note: consider using `--verbose` to print the full type name to the console

Some errors have detailed explanations: E0277, E0599, E0631.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `glassbox` (bin "glassbox") due to 3 previous errors
